[package]
name = "los"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
# gdal = { version = "0.19", optional = true }
gdal = "0.19"
geo = "0.32.0"
geo-types = "0.7"
geotiff = "0.1.0"
thiserror = "2"

[dev-dependencies]
rstest = "0.26"

# [features]
# default = []
# gdal = ["dep:gdal"]

[profile.dev]
incremental = false
debug = true
